tests/build/fail/widget/module_path_missing_crate.rs
use zero_ui::core::widget;

// doesn't start with $crate::
#[widget(widget)]
pub mod test_widget {}

fn main() {}
